added new tags h1, h2

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     hello bacha kaise hai app log!!############
     </h1>
         <img src="xys" alt="nahi khul rha">
+        <h2>hell dosto in this fucking world</h2>
+        <h1>hello lfe</h1>
         
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere unde est consequatur. Excepturi hic quaerat omnis error et distinctios aliquid natus fuga pariatur libero obcaecati similique, atque perferendis iure? Voluptate, aliquid tenetur!</p>
     <form action="">
